--- a/css/olian.css
+++ b/css/olian.css
@@ -67,7 +67,10 @@ h1, h2 {
   -webkit-box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.75);
   -ms-box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.75);
-  box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.75); }
+  box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.75);
+  position: relative;
+  height: 600px;
+  background: #3B4044; }
   #slide img {
     -webkit-box-shadow: 10px 0 15px 0 rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 10px 0 15px 0 rgba(0, 0, 0, 0.75);
@@ -75,7 +78,11 @@ h1, h2 {
     box-shadow: 10px 0 15px 0 rgba(0, 0, 0, 0.75);
     z-index: 0;
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    display: none;
+    position: absolute; }
+  #slide .visible {
+    left: 0; }
   #slide .description {
     background: rgba(100, 130, 130, 0.6);
     -webkit-box-shadow: 10px 10px 10px 0 rgba(140, 180, 180, 0.2);
