'filete' do choro do André.

--- a/pautas/style.css
+++ b/pautas/style.css
@@ -8,7 +8,7 @@ label, #path {
 }
 
 body {
-    background: #efc21e; /* Amarelo */
+    background-image: url("http://i.imgur.com/XugTJ7u.jpg");
 }
 
 h1 {
