--- a/pautas/style.css
+++ b/pautas/style.css
@@ -7,6 +7,10 @@ label, #path {
     color: white;
 }
 
+.modal-content label {
+    color: #333;
+}
+
 body {
     background-image: url("../images/filete.jpg");
     background-color: #535353;
