--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ a:hover, .selec a {
 }
 
 body {
-    background: rgb(239, 236, 229);
+    background: #4d4d4d;
 }
 
 #modal-area {
@@ -123,17 +123,17 @@ body {
 }
 
 H2{
-    color: #4d4d4d !important;
+    color: #A2A2A2 !important;
     padding: 20px;
-    border-top: 1px solid #4d4d4d;
-    border-bottom: 1px solid #4d4d4d;
+    border-top: 1px solid #A2A2A2;
+    border-bottom: 1px solid #A2A2A2;
 }
 
 #grid {
     text-align: center;
 }
 #grid > div {
-    /*background: #EEE;*/
+    background: #EEE;
     /*color: #000 !important;*/
     /*-webkit-box-shadow: 5px 0px 10px 0px rgba(0,0,0,0.5);
     -moz-box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.5);
@@ -181,6 +181,7 @@ H2{
   position: relative;
   box-sizing: border-box;
   background: transparent;
+  box-shadow: 0 0 10px 0;
 }
 .qntd-fotos {
   color: #ccc;
@@ -240,4 +241,46 @@ label  {
 @keyframes rot {
 	from {transform: rotate(0deg);}
 	to {transform: rotate(359deg);}
+}
+
+#bg-modal {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: rgba(72, 72, 72, 0.46);
+    top: 0;
+    left: 0;
+    text-align: center;
+}
+
+#md-content {
+    max-width: 90%;
+    max-height: 90%;
+    display: inline-block;
+    margin: 5% auto;
+    background: white;
+    border-radius: 5px;
+    box-shadow: 0 0 20px 0;
+}
+
+#md-content img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#control {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    vertical-align: middle;
+    background: rgba(130, 130, 100, 0.6);
+    color: white;
+    font-weight: bold;
+    padding: 20px 10px;
+}
+#control p {
+    font-family: helvetica;
+    font-size: 18px;
 }
