--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ a:hover, .selec a {
 
 .item:hover, .selec {
     background: #F7BA17;
-    box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px 0px rgba(0,0,0,0.5);
 }
 
 body {
@@ -59,6 +59,7 @@ body {
     width: 60px;
     background: #4d4d4d;
     z-index: 1;
+    box-shadow: 0 0 10px 0;
 
     /*
     -webkit-box-shadow: 5px 0px 10px 0px rgba(0,0,0,0.5);
