--- a/css/desque-ad.css
+++ b/css/desque-ad.css
@@ -5,12 +5,12 @@
   padding: 5px;
   background: rgba(100,100,160,0.3);
   margin: 0 auto;
-  -webkit-filter: grayscale(95%); /* Chrome, Safari, Opera */
+  -webkit-filter: grayscale(95%);
     filter: grayscale(95%);
 }
 
 #desque-ad:hover {
-  -webkit-filter: grayscale(40%); /* Chrome, Safari, Opera */
+  -webkit-filter: grayscale(40%);
     filter: grayscale(40%);
 }
 
