--- a/css/desque-ad.css
+++ b/css/desque-ad.css
@@ -1,12 +1,14 @@
 #desque-ad {
-  position: fixed;
+  /*position: fixed;
   bottom: 0;
-  right: 0;
-  padding: 5px;
-  background: rgba(100,100,160,0.3);
   margin: 0 auto;
-  -webkit-filter: grayscale(95%);
-    filter: grayscale(95%);
+  right: 0;*/
+  margin-top: 40px;
+  display: inline-block;
+  padding: 5px;
+  /*background: rgba(100,100,160,0.3);*/
+  -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
 }
 
 #desque-ad:hover {
